--- a/custom_addons/ramaera/report/purchase.report_inherit.xml
+++ b/custom_addons/ramaera/report/purchase.report_inherit.xml
@@ -1,88 +1,158 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-<template
-        id="report_purchaseorder_document_inherit"
-        inherit_id="purchase.report_purchaseorder_document">
+    <template
+            id="report_purchaseorder_document_inherit"
+            inherit_id="purchase.report_purchaseorder_document">
 
-    <xpath expr="//t/div[hasclass('page')]/div[@id='informations']" position="replace">
+          <xpath expr="//t[3]/t/div" position="replace">
 
-  <div id="informations" class="row mt-4 mb32">
-                   <div t-if="o.user_id" class="col-3 bm-2">
-                    <strong>Purchase Representative:</strong>
-         <div t-field="o.user_id"  t-options='{"widget": "contact", "fields": [ "name", "phone","email"], "no_marker": True, "phone_icons": True}'/>
-                </div>
+<div>
+                    <div t-field="o.dest_address_id"
+                        t-options='{"widget": "contact", "fields": ["address", "name","phone","vat"], "no_marker": True, "phone_icons": True}' name="purchase_shipping_address"/>
+
+</div>
+
+        </xpath>
+
+
+
+        <xpath expr="//t[2]/div" position="replace">
+
+            <div>
+                <strong>Supplier (Bill From) :</strong>
+                <div t-field="o.partner_id"
+                     t-options='{"widget": "contact", "fields": ["address", "name", "phone", "vat"], "no_marker": True, "phone_icons": True}'/>
+
+            </div>
+        </xpath>
+
+        <xpath expr="//t/div[hasclass('page')]/div[@id='informations']" position="replace">
+
+            <div id="informations" class="row mt-4 mb32">
+
                 <div t-if="o.partner_ref" class="col-3 bm-2">
                     <strong>Your Order Reference:</strong>
                     <p t-field="o.partner_ref" class="m-0"/>
                 </div>
                 <div t-if="o.state in ['purchase','done'] and o.date_approve" class="col-3 bm-2">
                     <strong>Order Date:</strong>
-                    <p t-field="o.date_approve" class="m-0"/>
+                    <p t-field="o.date_approve" widget="date" t-options="{'format': 'dd/MM/yyyy'}" class="m-0"/>
                 </div>
                 <div t-elif="o.date_order" class="col-3 bm-2">
-                    <strong >Order Deadline:</strong>
+                    <strong>Order Deadline:</strong>
                     <p t-field="o.date_order" class="m-0"/>
                 </div>
             </div>
 
 
+        </xpath>
 
 
-    </xpath>
+        <xpath expr="//t/div[hasclass('page')]/table/thead/tr/th" position="before">
+            <th name="th_product">
+                <strong>Product</strong>
+            </th>
+        </xpath>
+
+        <xpath expr="//t/div[hasclass('page')]/table/thead/tr/th[4]" position="replace">
+<th name="th_product">
+                <strong>HSN/SAC Code</strong>
+            </th>
 
 
 
-     <xpath expr="//t/div[hasclass('page')]/table/thead/tr/th" position="before">
-      <th name="th_product"><strong>Product</strong></th>
-    </xpath>
+        </xpath>
+
+<!--        <xpath expr="//table[1]/thead/tr[1]/th[1]" position="before">-->
+<!--            <th class="text-left">Sl. No.</th>-->
+<!--        </xpath>-->
+<!--        <xpath expr="//table[1]/tbody/t[2]/tr[1]/t[1]/td[1]" position="before">-->
+<!--            <td class="text-left">-->
+<!--                <span t-field="line.sl_no"/>-->
+<!--            </td>-->
+<!--        </xpath>-->
 
 
-      <xpath expr="//t/div[hasclass('page')]/table/tbody/t[2]/tr" position="replace">
-            <tr t-att-class="'bg-200 fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
-                            <t t-if="not line.display_type">
 
-            <td id="productid">
+        <xpath expr="//t/div[hasclass('page')]/table/tbody/t[2]/tr" position="replace">
+            <tr  t-att-class="'bg-200 fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
+                <t t-if="not line.display_type">
+<!--                    <td class="text-left">-->
+<!--                <span t-field="line.sl_no"/>-->
+<!--            </td>-->
+                    <td id="productid">
                         <span t-field="line.product_id"/>
-            </td>
-                                <td id="product">
-                                    <span t-field="line.name"/>
-                                </td>
-                                <td name="td_taxes">
-                                    <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
-                                </td>
-                                <td class="text-center">
-                                    <span t-field="line.date_planned"/>
-                                </td>
-                                <td class="text-end">
-                                    <span t-field="line.product_qty"/>
-                                    <span t-field="line.product_uom.name" groups="uom.group_uom"/>
-                                </td>
-                                <td class="text-end">
-                                    <span t-field="line.price_unit"/>
-                                </td>
-                                <td class="text-end">
-                                    <span t-field="line.price_subtotal"
-                                        t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                </td>
-                            </t>
-                            <t t-if="line.display_type == 'line_section'">
-                                <td colspan="99" id="section">
-                                    <span t-field="line.name"/>
-                                </td>
-                                <t t-set="current_section" t-value="line"/>
-                                <t t-set="current_subtotal" t-value="0"/>
-                            </t>
-                            <t t-if="line.display_type == 'line_note'">
-                                <td colspan="99" id="note">
-                                    <span t-field="line.name"/>
-                                </td>
-                            </t>
-                        </tr>
+                    </td>
+                    <td id="product">
+                        <span t-field="line.name"/>
+                    </td>
 
 
 
-    </xpath>
+                    <td name="td_taxes">
+                        <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
+                    </td>
+                    <td>
+                        <!--<span t-field="line.name"/>-->
+                        <t t-if="line.product_id.l10n_in_hsn_code and o.company_id.account_fiscal_country_id.code == 'IN'">
+                            <h6>
+                                <!--    <strong class="ml16">HSN/SAC Code:</strong>-->
+                                <span t-field="line.product_id.l10n_in_hsn_code"/>
+                            </h6>
+                        </t>
 
-</template>
+                    </td>
+                    <td class="text-end">
+                        <span t-field="line.product_qty"/>
+                        <span t-field="line.product_uom.name" groups="uom.group_uom"/>
+                    </td>
+                    <td class="text-end">
+                        <span t-field="line.price_unit"/>
+                    </td>
+                    <td class="text-end">
+                        <span t-field="line.price_subtotal"
+                              t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                    </td>
+                </t>
+                <t t-if="line.display_type == 'line_section'">
+                    <td colspan="99" id="section">
+                        <span t-field="line.name"/>
+                    </td>
+                    <t t-set="current_section" t-value="line"/>
+                    <t t-set="current_subtotal" t-value="0"/>
+                </t>
+                <t t-if="line.display_type == 'line_note'">
+                    <td colspan="99" id="note">
+                        <span t-field="line.name"/>
+                    </td>
+                </t>
+            </tr>
+
+
+        </xpath>
+
+
+        <xpath expr="//t/div[hasclass('page')]/p" position="after">
+
+            <strong>Terms and Conditions</strong>
+            <p style="position:absolute;top:850px;right:10px;">Authorized Signatory</p>
+
+
+        </xpath>
+
+
+<!--      <xpath expr="//div[@class='row justify-content-end']" position="after">-->
+<!--            <div style="font-size:15px; padding-top:15px; padding-bottom:15px;">-->
+<!--                <span>-->
+<!--                    <strong>Amount in Words (Total) :</strong>-->
+<!--                </span>-->
+<!--                <span t-field="o.number_to_words"/>-->
+<!--            </div>-->
+<!--        </xpath>-->
+
+
+
+
+    </template>
 
 </odoo>
