Buyer Address heading fixed

--- a/custom_addons/ramaera/report/account.invoice_account_report_inherit.xml
+++ b/custom_addons/ramaera/report/account.invoice_account_report_inherit.xml
@@ -64,7 +64,7 @@
 
         </xpath>
 
-          <xpath expr="//div[@name='address_same_as_shipping']/t" position="after">
+          <xpath expr="//div[@name='address_same_as_shipping']/t/address" position="before">
 
             <strong>Buyer(Bill To)  and   Consignee(Ship To): </strong>
 
